<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="signInButtonText">Sign In</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="firstNameTextViewText">First Name</string>
    <string name="lastNameTextViewText">Last Name</string>
    <string name="emailTextViewText">Email</string>
    <string name="passwordTextViewText">Password</string>
    <string name="verifyPasswordTextViewText">Verify password</string>
    <string name="log_out">Log Out</string>
    <string name="hello_blank_fragment">Welcome, </string>
    <string name="pref_file">com.abc.preference_file</string>
    <string name="pref_login_status">com.abs.preference_login_status</string>
    <string name="pref_user_name">com.abs.preference_user_name</string>
    <string name="pref_user_id">com.abs.preference_user.id</string>
    <string name="gameListButtonText">My games</string>
    <string name="increaseResult1ButtonText">Start</string>
    <string name="increaseResult2ButtonText">+2</string>
    <string name="defaultScore">0:0</string>
    <string name="defaultPlayer">Player</string>
    <string name="no_account_suggestion">Do not have an account yet?</string>

</resources>
